--- a/hkhl/b2c.html
+++ b/hkhl/b2c.html
@@ -1217,7 +1217,7 @@ a {
         display: none;
     }
     .stage .text{
-        bottom: 200px;
+        bottom: 124px;
         /*text-align: center;*/
         color: #ffffff;
         width: 639px;
@@ -2740,7 +2740,7 @@ a {
     .ani-2 .scene-3.start-animate .left-hand{
         -webkit-animation-name: leftHandDown2Top;
         animation-name:leftHandDown2Top;
-        -webkit-animation-timing-function: linear;
+        -webkit-animation-timing-function: ease-out;
         -webkit-animation-duration: 0.3s;
         -webkit-animation-delay: 0.9s;
     }
