--- a/overseas/index_sale_e.html
+++ b/overseas/index_sale_e.html
@@ -333,7 +333,7 @@
     <div class="wrap-flr flr6">
         <a href="javascript:void(0)" class="href-map" id="flr6"></a>
         <div class="flr-hd wrap-990">
-            <i class="icon"><a href="http://en.jd.com/search?sellerName=ANDA%2BLUMEN&seller=21" class="href-icon" target="_blank" title="more"></a></i>
+            <i class="icon"><a href="http://en.jd.com/search?category=&keywords=LUMINTOP&categoryName=All%2520Categories" class="href-icon" target="_blank" title="more"></a></i>
             <h2>CANIS,a new women's clothing brand, which is founded in 2014 in China. The product include women's
                 dress, leggings, swimwear and kids' clothing. Bikini set is our main product. We will offer you beautifu
                 bikinis with special design and good quality, makes you more charming and attracting.</h2>
@@ -347,11 +347,11 @@
         </div>
         <!-- S flr-ft -->
         <div class="flr-ft wrap-990">
-            <a href="http://en.jd.com/search?sellerName=ANDA%2BLUMEN&seller=21" class="href-more" target="_blank" title="more" data-text="MORE&nbsp&gt;">MORE&nbsp&gt;</a>
+            <a href="http://en.jd.com/search?category=&keywords=LUMINTOP&categoryName=All%2520Categories" class="href-more" target="_blank" title="more" data-text="MORE&nbsp&gt;">MORE&nbsp&gt;</a>
         </div>
         <!-- E flr-ft -->
         <!-- S flr-extra -->
-        <div class="flr-extra"><a href="http://en.jd.com/search?sellerName=ANDA%2BLUMEN&seller=21" class="href-flr-extra" target="_blank" title="more"></a></div>
+        <div class="flr-extra"><a href="http://en.jd.com/search?category=&keywords=LUMINTOP&categoryName=All%2520Categories" class="href-flr-extra" target="_blank" title="more"></a></div>
         <!-- E flr-extra -->
     </div>
     <!-- E flr6 -->
@@ -657,14 +657,14 @@
             'tpl': 1,
             'data': [
                 {
-                "name": "Sport Heart Rate Monitor Digital Watch",
-                "link": "http://en.jd.com/product/SKMEI-Pulse-Heart-Rate-Counter-Calories-Monitor-Men-Women-Digital-Sports-Watch-Sphygmograph-Pulsometer-Pulse-Wave-Wristwatch_669243.html",
-                "nameRussian": "Спортивные цифровые часы с монитором сердечной частоты",
-                "img": "tmp/goods2-1.jpg",
-                "price": "9.9",
-                "oldPrice": "25.00",
-                "discount": "60%"
-            },
+                    "name": "Sport Heart Rate Monitor Digital Watch",
+                    "link": "http://en.jd.com/product/SKMEI-Pulse-Heart-Rate-Counter-Calories-Monitor-Men-Women-Digital-Sports-Watch-Sphygmograph-Pulsometer-Pulse-Wave-Wristwatch_669243.html",
+                    "nameRussian": "Спортивные цифровые часы с монитором сердечной частоты",
+                    "img": "tmp/goods2-1.jpg",
+                    "price": "9.9",
+                    "oldPrice": "25.00",
+                    "discount": "60%"
+                },
                 {
                     "name": "Military Electronic Men Quartz Watch",
                     "link": "http://en.jd.com/product/SKEMI-New-Fashion-Watches-Men-Solar-Sports-Watch-2-Time-Zone-Quartz-Digital-Led-Casual-Wristwatches_669139.html",
@@ -912,62 +912,65 @@
             'tpl': 1,
             'data': [
                 {
-                    "name": "Tronsmart T1000 Plus Miracast Adapter",
-                    "link": "http://en.jd.com/product/Tronsmart-T1000-Plus-Miracast-Adapter-compatible-with-EZCast-DLNA-Miracast-and-AirPlay-802-11ac_667474.html",
+                    "name": "Powerful LED Tactical Flashlight 1000 Lumens 6 Modes, Strobe, Big Side switch",
+                    "link": "http://en.jd.com/product/LUMINTOP-TD16-Powerful-Cree-LED-Tactical-Flashlight-1000-Lumens-with-Strobe-6-Modes-Waterproof-Torch-Light-With-Holster-Lanyard_670687.html",
                     "nameRussian": "LED оперативный фонарь, мощность 1000 люмен, 6 режимов со стробом, узловой включатель",
                     "img": "tmp/goods6-1.jpg",
-                    "price": "25.99",
-                    "oldPrice": "38.99",
-                    "discount": "33%"
+                    "price": "75.98",
+                    "oldPrice": "124.99",
+                    "discount": "39%"
                 },
                 {
-                    "name": "Draco H3 Android Dongle TV Stick",
-                    "link": "http://en.jd.com/product/Tronsmart-Draco-H3-Android-TV-Dongle-TV-Stick-Allwinner-H3-Quad-Core-1G-8G-HDMI-Bluetooth-4-0-4K-H-265-OTA-Android-4-4_667493.html",
-                    "nameRussian": "Фонарь AAA Keychain , 110 Люмен, 6 режимов, Водонепроницаемый, всего 3.2 дюйма 15г",
+                    "name": "Rechargeable LED Flashlight 900 Lumens With Charger USB Cable, Holster, Lanyard",
+                    "link": "http://en.jd.com/product/LUMINTOP-EDC21-Rechargeable-LED-Flashlight-900-Lumens-With-Charger-USB-Cable-Holster-Lanyard-Cree-EDC-Torch-Light-With-Strobe_671115.html",
+                    "nameRussian": "Фонарь LED Перезаряжаемый, 900 люмен с USB зарядным кабелем, несессер, спусковой шнур",
                     "img": "tmp/goods6-2.jpg",
-                    "price": "35.99",
-                    "oldPrice": "50.99",
-                    "discount": "29%"
+                    "price": "49.98",
+                    "oldPrice": "99.99",
+                    "discount": "50%"
                 },
+
                 {
-                    "name": "TS-CC2PC Qualcomm Certified Quick Charge 2.0 Two Port Car Charger",
-                    "link": "http://en.jd.com/product/Tronsmart-TS-CC2PC-Qualcomm-Certified-Quick-Charge-2-0-Two-Port-Car-Charger-for-Samsung-Galaxy-S6-S6-Edge-HTC-M9-N_667753.html",
+                    "name": "Just 2.8 Inches and 13g, Mini Colorful Keychain Flashlight 110 Lumens, 5 Colors, Waterproof",
+                    "link": "http://en.jd.com/product/LUMINTOP-WORM-AAA-Battery-Small-LED-Keychain-Flashlight-110-Lumens-Just-13g-28g-Portable-Waterproof-Colorful-Key-chain-Lights_673790.html",
                     "nameRussian": "Мини цветной фонарик Keychain 110 люмен, 5 цветов, водонепроницаемый, всего 2.8 дюймов, 13 г",
                     "img": "tmp/goods6-3.jpg",
-                    "price": "11.99",
-                    "oldPrice": "18.99",
-                    "discount": "37%"
+                    "price": "9.8",
+                    "oldPrice": "25.99",
+                    "discount": "62%"
                 },
                 {
-                    "name": "Russian Version Tronsmart TSM-01 Air Mouse + Keyboard Remote control",
-                    "link": "http://en.jd.com/product/Tronsmart-TSM-01-Russian-Version-Air-Mouse-Keyboard-Remote-control-for-TV-Box-PC-Motion-Sensing-Games_667886.html",
+                    "name": "Brightest LED Flashlight 2800 Lumens With Strobe, 3*Cree LED",
+                    "link": "http://en.jd.com/product/LUMINTOP-PS03-Brightest-LED-Flashlight-2800-Lumens-3-Cree-LED-Waterproof-Torch-Light-With-Strobe-Black-Flashlight-With-Lanyard_671405.html",
                     "nameRussian": "LED фонарь 2800 люмен со строб функцией, 3*Cree LED",
                     "img": "tmp/goods6-4.jpg",
-                    "price": "13.59",
-                    "oldPrice": "18.99",
-                    "discount": "28%"
+                    "price": "99.98",
+                    "oldPrice": "173.99",
+                    "discount": "43%"
                 },
+
                 {
-                    "name": "40W 8A 5-Port USB Desktop Charger",
-                    "link": "http://360buy.jd.com/product/Tronsmart-40W-8A-5-Port-Portable-Smart-IC-USB-Desktop-Charger-Full-Speed-Charge-For-iPhone-Smart-phone-Tablet_667496.html",
-                    "nameRussian": "Фонарь LED Перезаряжаемый, 900 люмен с USB зарядным кабелем, несессер, спусковой шнур",
+                    "name": "Small AAA Keychain Flashlight , 110 Lumens 3 Modes  Waterproof, Just 3.2 Inches 15g",
+                    "link": "http://en.jd.com/product/LUMINTOP-Tool-AAA-Cree-LED-Small-Flashlight-Keychain-110-Lumens-3-Modes-Cheap-Waterproof-Keychain-Light-At-Just-3-2-Inches-15g_673365.html",
+                    "nameRussian": "Фонарь AAA Keychain , 110 Люмен, 6 режимов, Водонепроницаемый, всего 3.2 дюйма 15г",
                     "img": "tmp/goods6-5.jpg",
-                    "price": "18.99",
-                    "oldPrice": "27.99",
-                    "discount": "32%"
+                    "price": "14.98",
+                    "oldPrice": "25.99",
+                    "discount": "42%"
                 },
                 {
-                    "name": " TS-WC1Q QC2.0 Rapid USB Wall Charger - EU Plug",
-                    "link": "http://en.jd.com/product/Tronsmart-TS-WC1Q-QC2-0-1P-USB-Rapid-Wall-Charger-Stand-up-Fast-Wall-Charger-18W-EU-Plug_667749.html",
+                    "name": "Small Bright LED Headlamp  With Headband, 7 Modes, 610 Lumens Waterproof",
+                    "link": "http://en.jd.com/product/LUMINTOP-HL01-Small-Bright-Cree-LED-Headlamp-Flashlight-With-Headband-610-Lumens-Waterproof-Head-Torch-Light-with-Strobe_673383.html",
                     "nameRussian": "Яркий светодиодный фонарик на голову, 7 режимов, 610 люмен, водонепроницаемый",
                     "img": "tmp/goods6-6.jpg",
-                    "price": "13.99",
-                    "oldPrice": "15.99",
-                    "discount": "13%"
+                    "price": "39.98",
+                    "oldPrice": "74.99",
+                    "discount": "47%"
                 }
             ]
         }
     ];
+
 </script>
 <!-- E 数据 -->
 <script>
